[gd_scene load_steps=8 format=2]

[ext_resource path="res://Textures/beam.png" type="Texture" id=1]
[ext_resource path="res://Textures/beam2.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Beam.gd" type="Script" id=3]
[ext_resource path="res://Sounds/laser.wav" type="AudioStream" id=4]
[ext_resource path="res://Patterns/ColorMaterial.tres" type="Material" id=5]

[sub_resource type="ShaderMaterial" id=6]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[node name="Beam" type="Node2D"]
material = SubResource( 6 )
scale = Vector2( 1, 0.5 )
script = ExtResource( 3 )

[node name="Beam1" type="Sprite" parent="."]
material = ExtResource( 5 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 226, 32 )

[node name="Beam2" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 226, 32 )

[node name="ActivateSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
